fix for leadspace  getting hidden behind the masthead for mobile port

--- a/css/scss/shared/_adaptive.scss
+++ b/css/scss/shared/_adaptive.scss
@@ -317,6 +317,11 @@ a.ibm-thumbnail-module h3 {
 		display: none;
 	}
 	
+	/* fix for the leadsace as it is getting hidden behind the masthead - will confirm with Jeff*/
+	#ibm-top #ibm-leadspace-head {
+		clear: left;
+	}
+	
 	#ibm-universal-nav {
 		min-width: 100%;
 		height: 35px !important;
